--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
+  },
+  "engines": {
+    "npm": "6.13.4",
+    "node": "12.16.1"
   }
 }
